fixed navbar z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -34,7 +34,7 @@
 
 .menu-wrap .toggler {
   position: absolute;
-  z-index: 2;
+  z-index: 999;
   cursor: pointer;
   width: 60px;
   height: 60px;
@@ -43,7 +43,7 @@
 
 .menu-wrap .hamburger {
   top: 0;
-  z-index: 1;
+  z-index: 996;
   width: 60px;
   height: 60px;
   padding: 1rem;
@@ -71,7 +71,7 @@
 .menu-wrap .hamburger > div::after {
   content: '';
   position: absolute;
-  z-index: 1;
+  z-index: 996;
   top: -10px;
   width: 100%;
   height: 2px;
@@ -104,6 +104,7 @@
 /* Show Menu */
 .menu-wrap .toggler:checked ~ .menu {
   visibility: visible;
+  z-index: 995;
 }
 
 .menu-wrap .toggler:checked ~ .menu > div {
@@ -127,6 +128,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 995;
 }
 
 .menu-wrap .menu > div {
@@ -140,6 +142,7 @@
   justify-content: center;
   transform: scale(0);
   transition: all 0.4s ease;
+  z-index: 995;
 }
 
 .menu-wrap .menu > div > div {
